--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -41,9 +41,9 @@
 <!-- datepicker -->
 <script src="/assets/js/flatpickr.js"></script>
 
-<script> 
+<script>
 
-   document.getElementById('uploadButton').addEventListener('click', function() {
+  document.getElementById('uploadButtonPatrol').addEventListener('click', function() {
     // Disable the button and add the loading class
     var button = this;
     button.classList.add('loading');
@@ -56,22 +56,76 @@
       
       button.setAttribute('type', 'submit');
 
-      // // Show the specific toast by removing the 'd-none' class
-      // toast.classList.add('show');
+      // Re-enable the button and remove the loading class
+      button.classList.remove('loading');
+      button.disabled = false;
+    }, 2000); // 2000 milliseconds (2 seconds)
+
+    var myDropzone1 = Dropzone.forElement('#myDropzone1');
+
+      if (myDropzone1.getQueuedFiles().length > 0) {
+        myDropzone1.processQueue();
+      }
+      
+    var formElement1 = document.getElementById('patrolReportForm');
+    formElement1.submit();
+  });
+
+   document.getElementById('uploadButtonCase').addEventListener('click', function() {
+
+    // Disable the button and add the loading class
+    var button = this;
+    button.classList.add('loading');
+    button.disabled = true;
+
+    // Delay showing the specific toast for 2 seconds
+    setTimeout(function() {
+      // Get the specific toast by its id
+      // var toast = document.getElementById('alertToast');
+      
+      button.setAttribute('type', 'submit');
 
       // Re-enable the button and remove the loading class
       button.classList.remove('loading');
       button.disabled = false;
     }, 2000); // 2000 milliseconds (2 seconds)
 
-    const myDropzone = Dropzone.forElement('#myDropzone');
+    var myDropzone2 = Dropzone.forElement('#myDropzone2');
 
-      if (myDropzone.getQueuedFiles().length > 0) {
-        myDropzone.processQueue();
+      if (myDropzone2.getQueuedFiles().length > 0) {
+        myDropzone2.processQueue();
       }
       
-    var formElement = document.getElementById('patrolReportForm');
-    formElement.submit();
+    var formElement2 = document.getElementById('caseReportForm');
+    formElement2.submit();
+  });
+
+  document.getElementById('uploadButtonSchedule').addEventListener('click', function() {
+    // Disable the button and add the loading class
+    var button = this;
+    button.classList.add('loading');
+    button.disabled = true;
+
+    // Delay showing the specific toast for 2 seconds
+    setTimeout(function() {
+      // Get the specific toast by its id
+      // var toast = document.getElementById('alertToast');
+      
+      button.setAttribute('type', 'submit');
+
+      // Re-enable the button and remove the loading class
+      button.classList.remove('loading');
+      button.disabled = false;
+    }, 2000); // 2000 milliseconds (2 seconds)
+
+    var myDropzone3 = Dropzone.forElement('#myDropzone3');
+
+      if (myDropzone3.getQueuedFiles().length > 0) {
+        myDropzone3.processQueue();
+      }
+      
+    var formElement3 = document.getElementById('scheduleReportForm');
+    formElement3.submit();
   });
 </script>
 
