--- a/views/patrol-report-details.ejs
+++ b/views/patrol-report-details.ejs
@@ -84,7 +84,7 @@
                         <td
                           class="fw-bold ps-1 py-1 text-1000 badge badge badge-phoenix badge-phoenix-primary ms-2"
                         >
-                          <%= pbNumber %>
+                          PB<%= pbNumber %>
                         </td>
                       </tr>
                     </tbody>
