--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -79,10 +79,10 @@
                 <!-- data-options are the setting for dropzone can find the settings also inside -->
                 <form
                   class="dropzone dropzone-multiple p-0 mb-4"
-                  id="myDropzone"
+                  id="myDropzone1"
                   data-dropzone="data-dropzone"
-                  action="/upload"
-                  data-options='{"url":"/upload","paramName": "file"}'
+                  action="/upload-patrol"
+                  data-options='{"url":"/upload-patrol","paramName": "file"}'
                 >
                   <div class="dz-message" data-dz-message="data-dz-message">
                     <img
@@ -326,7 +326,7 @@
                   <!-- Submit button -->
                   <div class="col-12">
                     <button
-                      id="uploadButton"
+                      id="uploadButtonPatrol"
                       class="btn btn-primary"
                       type="submit"
                     >
