--- a/views/patrol-report-view.ejs
+++ b/views/patrol-report-view.ejs
@@ -200,7 +200,7 @@
               </td>
               <td class="align-middle white-space-nowrap text-end pbNumber">
                 <span class="badge badge-phoenix fs--2 badge-phoenix-primary"
-                  ><%= item.username %></span
+                  >PB<%= item.username %></span
                 >
               </td>
               <td class="align-middle text-end white-space-nowrap pe-0 action">
