--- a/views/schedule-submit.ejs
+++ b/views/schedule-submit.ejs
@@ -38,7 +38,7 @@
                 <!-- data-options are the setting for dropzone can find the settings also inside -->
                 <form
                   class="dropzone dropzone-multiple p-0 mb-4"
-                  id="myDropzone"
+                  id="myDropzone3"
                   data-dropzone="data-dropzone"
                   action="/upload-schedule"
                   data-options='{"url":"/upload-schedule","paramName": "file"}'
@@ -120,7 +120,7 @@
                   action="/schedule/submit"
                   method="post"
                   class="row g-3 has-validation"
-                  id="patrolReportForm"
+                  id="scheduleReportForm"
                 >
                   <div class="col-md-6">
                     <label class="form-label" for="validationCustom01">
@@ -284,7 +284,7 @@
                   <!-- Submit button -->
                   <div class="col-12">
                     <button
-                      id="uploadButton"
+                      id="uploadButtonSchedule"
                       class="btn btn-primary"
                       type="submit"
                     >
